--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 </head>
 <body>
 
-<nav class="navbar container navbar-expand-lg navbar-light bg-light menu ">
-    <div class="container-fluid">
-        <a class="navbar-brand logo-img" href="#">
-            <img src="./icon/Logo.png" alt="" class="img-fluid w-50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link text-dark" aria-current="page" href="#">Home</a>
-                <a class="nav-link text-dark" href="#">Features</a>
-                <a class="nav-link text-dark" href="#">Pricing</a>
-                <a class="nav-link text-dark" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+<header>
+    <nav class="navbar container navbar-expand-lg navbar-light bg-light menu ">
+        <div class="container-fluid">
+            <a class="navbar-brand logo-img" href="#">
+                <img src="./icon/Logo.png" alt="" class="img-fluid w-50">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link text-dark" aria-current="page" href="#">Home</a>
+                    <a class="nav-link text-dark" href="#">Product</a>
+                    <a class="nav-link text-dark" href="#">About Us</a>
+                    <a class="nav-link text-dark" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
 
 <main>
     <section class="hero">
@@ -119,7 +121,7 @@
             <div class="col">
                 <div class="card h-100">
                     <div class="card-img-wrapper">
-                        <img src="./photos/pngwing%2016.png" class="card-img-top" alt="...">
+                        <img src="./photos/1282271-14-revolution-checkpoint-friendly-backpack-teb012us-backpacks-laptop-bags-targus-backpack-png-1200_1200%201.png" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">CityLite Security Backpack </h3>
